cluster/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desafiobossa  
  namespace: default
  labels:
    app: "desafiobossa"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: desafiobossa
  template:
    metadata:
      labels:
        app: desafiobossa
    spec:
      containers:
        - name: desafiobossa
          image: aksallanregistry.azurecr.io/desafiobossa:_VERSION_      
          ports:
            - containerPort: 3000
