cluster/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: desafiobossa  
  namespace: default
  labels:
    app: "desafiobossa"
spec:
  selector:
    app: desafiobossa
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
