cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: desafiobossa-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - yasmin.allanteste.cloudns.ph
    secretName: yasmin-tls
  rules:
  - host: yasmin.allanteste.cloudns.ph
    http:
      paths:
      - backend:
          serviceName: desafiobossa
          servicePort: 80
